compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__same_catch_all_bytes_are_redundant.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1741
expression: "pub fn main() {\n  let bit_array = <<>>\n  case bit_array {\n    <<_:bytes>> -> <<>>\n    <<a:bytes>> -> a\n    _ -> <<>>\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  let bit_array = <<>>
  case bit_array {
    <<_:bytes>> -> <<>>
    <<a:bytes>> -> a
    _ -> <<>>
  }
}

----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     <<a:bytes>> -> a
  │     ^^^^^^^^^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
