compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__unreachable_multi_pattern.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1821
expression: "\npub fn main() {\n  let x = 1\n  let y = 2\n  case x, y {\n    1, 2 -> True\n    1, 2 -> False\n    _, _ -> panic\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let x = 1
  let y = 2
  case x, y {
    1, 2 -> True
    1, 2 -> False
    _, _ -> panic
  }
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:7:5
  │
7 │     1, 2 -> False
  │     ^^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
